Adds basic records & classes for mastodon